apache-kafka/strimzi/archive/kafka-bridge/kafka-bridge-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-bridge-ingress
  namespace: kafka
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: my-bridge-bridge-service  # The name of the Kafka Bridge service
              port:
                number: 8080
